--- a/api/paths/authenticate.yaml
+++ b/api/paths/authenticate.yaml
@@ -8,6 +8,6 @@ get:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/UserInformation"
+            $ref: "../schemas/UserInformation.yaml"
     "401":
       description: Not authenticated
