--- a/api/paths/users.yaml
+++ b/api/paths/users.yaml
@@ -10,7 +10,7 @@ get:
           schema:
             type: array
             items:
-              $ref: "#/components/schemas/UserInformation"
+              $ref: "../schemas/UserInformation.yaml"
     "403":
       description: Unauthorized
     "500":
