--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,9 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/mocha": "^8.2.1",
     "@types/passport": "^1.0.5",
-    "@types/passport-local": "^1.0.33"
+    "@types/passport-local": "^1.0.33",
+    "mocha": "^8.3.2"
   }
 }
