--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "mocha dist/test"
+    "test": "mocha dist/tests/index"
   },
   "dependencies": {
     "arangojs": "^7.2.0",
