--- a/api/paths/packages_docId.yaml
+++ b/api/paths/packages_docId.yaml
@@ -14,7 +14,7 @@ post:
               type: array
               items:
                 type: string
-            networkElements:
+            products:
               type: array
               items:
                 type: string
