Add spec GET /operators/name/{name}

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -27,6 +27,8 @@ paths:
     $ref: './paths/networkElement.yaml'
   /operators:
     $ref: './paths/operators.yaml'
+  /operators/name/{name}:
+    $ref: './paths/operators_name.yaml'
   /packages:
     $ref: './paths/packages.yaml'
   /packages/{docId}:
