Fix error on OpenAPI spec

--- a/api/paths/requirements.yaml
+++ b/api/paths/requirements.yaml
@@ -5,7 +5,7 @@ get:
 post:
   tags:
     - Requirement
-  summary: Add a deployment option
+  summary: TODO Add a requirement
   requestBody:
     content:
       application/json:
