Align with API spec

--- a/api/paths/packages.yaml
+++ b/api/paths/packages.yaml
@@ -24,6 +24,7 @@ get:
         items:
           type: string
           enum:
+            - operator
             - previous
             - owner
   responses:
