--- a/api/paths/deploymentOption.yaml
+++ b/api/paths/deploymentOption.yaml
@@ -3,21 +3,9 @@ post:
     - Deployment option
   summary: Rename a deployment option
   parameters:
-    - name: name
-      in: path
-      required: true
-      schema:
-        type: string
+    $ref: '../schemas/EnumRenameParameters.yaml'
   requestBody:
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - nameNew
-          properties:
-            nameNew:
-              type: string
+    $ref: '../schemas/EnumRenameRequestBody.yaml'
   responses:
     "200":
       description: Ok
