Use term docKey instead of docId

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -9,11 +9,11 @@ paths:
     $ref: './paths/authenticate.yaml'
   /deployment-options:
     $ref: './paths/deploymentOptions.yaml'
-  /deployment-options/{docId}:
+  /deployment-options/{docKey}:
     $ref: './paths/deploymentOption.yaml'
   /duplex-modes:
     $ref: './paths/duplexModes.yaml'
-  /duplex-modes/{docId}:
+  /duplex-modes/{docKey}:
     $ref: './paths/duplexMode.yaml'
   /join:
     $ref: './paths/join.yaml'
@@ -23,7 +23,7 @@ paths:
     $ref: './paths/logout.yaml'
   /network-elements:
     $ref: './paths/networkElements.yaml'
-  /network-elements/{docId}:
+  /network-elements/{docKey}:
     $ref: './paths/networkElement.yaml'
   /operators:
     $ref: './paths/operators.yaml'
@@ -31,25 +31,25 @@ paths:
     $ref: './paths/operators_name.yaml'
   /packages:
     $ref: './paths/packages.yaml'
-  /packages/{docId}:
+  /packages/{docKey}:
     $ref: './paths/packages_docId.yaml'
   /products:
     $ref: './paths/products.yaml'
-  /products/{docId}:
+  /products/{docKey}:
     $ref: './paths/product.yaml'
   /radio-access-technologies:
     $ref: './paths/radioAccessTechnologies.yaml'
-  /radio-access-technologies/{docId}:
+  /radio-access-technologies/{docKey}:
     $ref: './paths/radioAccessTechnology.yaml'
   /ran-sharing:
     $ref: './paths/ranSharings.yaml'
-  /ran-sharing/{docId}:
+  /ran-sharing/{docKey}:
     $ref: './paths/ranSharing.yaml'
   /requirements:
     $ref: './paths/requirements.yaml'
   /users/:
     $ref: './paths/users.yaml'
-  /users/docId/{docId}:
-    $ref: './paths/user_docId.yaml'
+  /users/docKey/{docKey}:
+    $ref: './paths/user_docKey.yaml'
   /users/username/{username}:
     $ref: './paths/user_username.yaml'
