--- a/api/paths/users.yaml
+++ b/api/paths/users.yaml
@@ -4,7 +4,7 @@ get:
   summary: Get a list of user information
   parameters:
     - name: username
-      description: A list of package names. Case insensitive and support partial match.
+      description: Username. Case insensitive and support partial match.
       in: query
       schema:
         type: string
