--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "randevu-shared": "file:../shared",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.2.3"
   }
 }
