--- a/api/paths/packages_docId.yaml
+++ b/api/paths/packages_docId.yaml
@@ -12,10 +12,10 @@ post:
               type: string
             previous:
               type: string
-              description: Document key of a previous subpackage.
+              description: Document ID of a previous subpackage.
             owner:
               type: string
-              description: Document key of a user.
+              description: Document ID of a user.
             deploymentOptions:
               $ref: '../schemas/DeploymentOptions.yaml'
             products:
