--- a/api/paths/requirements.yaml
+++ b/api/paths/requirements.yaml
@@ -19,7 +19,7 @@ post:
           properties:
             operator:
               type: string
-              description: Document key of an operator
+              description: Document ID of an operator
             title:
               type: string
             description:
