--- a/api/schemas/DeploymentOptions.yaml
+++ b/api/schemas/DeploymentOptions.yaml
@@ -1,4 +1,4 @@
 type: array
-dscription: Array of document key of RAN sharing.
+dscription: Array of document ID of RAN sharing.
 items:
   type: string
