--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "randevu-shared": "file:../shared",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.2.3"
