--- a/api/api.yaml
+++ b/api/api.yaml
@@ -54,6 +54,14 @@ paths:
     $ref: './paths/packages_sub_seqVal_operator.yaml'
   /packages/sub/{seqVal}/owner:
     $ref: './paths/packages_sub_seqVal_owner.yaml'
+  /packages/sub/{seqVal}/deployment-options:
+    $ref: './paths/packages_sub_seqVal_deploymentOptions.yaml'
+  /packages/sub/{seqVal}/products:
+    $ref: './paths/packages_sub_seqVal_products.yaml'
+  /packages/sub/{seqVal}/radio-access-technologies:
+    $ref: './paths/packages_sub_seqVal_radioAccessTechnologies.yaml'
+  /packages/sub/{seqVal}/ran-sharing:
+    $ref: './paths/packages_sub_seqVal_ranSharing.yaml'
 
   # Product
   /products:
