--- a/back/package.json
+++ b/back/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "randevu-shared": "file:../shared"
@@ -16,6 +17,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.1",
     "@types/passport": "^1.0.5",
     "@types/passport-local": "^1.0.33",
