[API] Add GET /packages/sub/{seqVal}/follow-ups

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -56,6 +56,8 @@ paths:
     $ref: './paths/packages_sub_seqVal_owner.yaml'
   /packages/sub/{seqVal}/previous:
     $ref: './paths/packages_sub_seqVal_previous.yaml'
+  /packages/sub/{seqVal}/follow-ups:
+    $ref: './paths/packages_sub_seqVal_followUps.yaml'
   /packages/sub/{seqVal}/deployment-options:
     $ref: './paths/packages_sub_seqVal_deploymentOptions.yaml'
   /packages/sub/{seqVal}/products:
