[API] Update POST /packages/sub/{seqVal}/owner

--- a/api/paths/packages_sub_seqVal_owner.yaml
+++ b/api/paths/packages_sub_seqVal_owner.yaml
@@ -21,3 +21,32 @@ get:
       description: Sub package not found
     "500":
       description: Internal failure
+post:
+  tags:
+    - Package
+  summary: Update an owner of a sub package
+  parameters:
+    - name: seqVal
+      in: path
+      required: true
+      schema:
+        type: string
+  requestBody:
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            owner:
+              type: string
+          required:
+            - owner
+  responses:
+    "200":
+      description: Ok
+    "400":
+      description: Invalid input
+    "403":
+      description: Unauthorized
+    "500":
+      description: Internal failure
