[API] Add parameter description

--- a/api/paths/packages_sub_seqVal_owner.yaml
+++ b/api/paths/packages_sub_seqVal_owner.yaml
@@ -39,6 +39,7 @@ post:
           properties:
             owner:
               type: string
+              description: Document ID of owner
           required:
             - owner
   responses:
