--- a/antd/package.json
+++ b/antd/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
+    "randevu-shared": "file:../shared",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
