--- a/antd/package.json
+++ b/antd/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.2.4"
   }
