--- a/antd/package.json
+++ b/antd/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "randevu-shared": "file:../shared",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
